--- a/Selenium/BDDFramework_regTest/pom.xml
+++ b/Selenium/BDDFramework_regTest/pom.xml
@@ -51,6 +51,11 @@
     <version>7.20.1</version>
 </dependency>
 
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-support</artifactId>
+    <version>4.27.0</version>
+</dependency>
 
     </dependencies>
 
