https://freshontable.atlassian.net/browse/FRES-3756

--- a/Selenium/BDDFramework_regTest/pom.xml
+++ b/Selenium/BDDFramework_regTest/pom.xml
@@ -57,12 +57,18 @@
             <version>4.27.0</version>
         </dependency>
 
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.8.0</version>
+		</dependency>
+
     </dependencies>
 
     <build>
         <plugins>
 
-            <!-- Java 21 Compiler -->
+			<!-- Java 21 Compiler -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -72,7 +78,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Test Runner -->
+			<!-- Test Runner -->
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
